# llm-router

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: model-scout.yml
config/: profiles.yml  providers.yml
llm_router/: __init__.py  __main__.py  config.py  router.py  scout.py  tracker.py
tests/: test_router.py
